<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="pattern_bookmarks">Bookmarks</string>
    <string name="pattern_bookmark_add_here">Add bookmark</string>
    <string name="pattern_bookmark_add_title">Add bookmark</string>
    <string name="pattern_bookmark_name">Bookmark name</string>
    <string name="pattern_bookmark_rename">Rename bookmark</string>
    <string name="pattern_bookmark_rename_title">Rename bookmark</string>
    <string name="pattern_bookmark_delete_title">Delete bookmark?</string>
    <string name="pattern_bookmark_delete_message">Delete “%1$s”?</string>
    <string name="pattern_bookmark_empty">No bookmarks yet.</string>
    <string name="pattern_bookmark_loading">Loading bookmarks…</string>
    <string name="pattern_bookmark_previous">Previous bookmark</string>
    <string name="pattern_bookmark_next">Next bookmark</string>
    <string name="pattern_bookmark_selected">Selected bookmark</string>
    <string name="pattern_bookmark_accessibility_description">Jump to bookmark %1$s, page %2$d</string>
    <string name="pattern_bookmark_action_accessibility_description">%1$s: %2$s</string>
    <string name="pattern_bookmark_name_required">A bookmark name is required.</string>
    <!-- Raja on aina PATTERN_BOOKMARK_NAME_MAX_LENGTH (50), ei vaihtuva määrä. -->
    <string name="pattern_bookmark_name_limit" tools:ignore="PluralsCandidate">Maximum %1$d characters</string>
    <string name="pattern_bookmark_name_too_long">Maximum 50 characters.</string>
    <string name="pattern_bookmark_invalid_location">This bookmark location is not valid.</string>
    <string name="pattern_bookmark_stale_document">This bookmark no longer belongs to this pattern.</string>
    <string name="pattern_bookmark_not_found">This bookmark no longer exists.</string>
    <string name="pattern_bookmark_save_failed">Could not save bookmark.</string>
    <string name="pattern_bookmark_rename_failed">Could not rename bookmark.</string>
    <string name="pattern_bookmark_delete_failed">Could not delete bookmark.</string>
    <string name="pattern_horizontal_reading_line">Horizontal reading line</string>
    <string name="pattern_show_vertical_guide">Show vertical guide</string>
    <string name="pattern_hide_vertical_guide">Hide vertical guide</string>
    <string name="pattern_center_vertical_guide">Center vertical guide</string>
    <string name="pattern_vertical_guide_description">Vertical guide</string>
    <string name="pattern_follow_current_row_on">Follow current row</string>
    <string name="pattern_follow_current_row_off">Stop following</string>
    <string name="pattern_return_to_current_row">Return to current row</string>
    <string name="pattern_follow_resumed">Following resumed at the current row.</string>
    <string name="pattern_follow_resumed_uncalibrated">Row location is not calibrated. Following resumed from the current position.</string>
    <string name="pattern_set_row_marker_here">Set row marker here for row %1$d</string>
    <!-- Kerros- ja sivunumerot ovat sijainteja, eivät määriä. -->
    <string name="pattern_follow_page_announcement" tools:ignore="PluralsCandidate">Row %1$d moved the reading line to page %2$d of %3$d.</string>
    <string name="pattern_bookmark_jump_announcement">%1$s, page %2$d of %3$d. Row following paused.</string>
    <string name="pattern_reading_line_move_up">Move reading line up</string>
    <string name="pattern_reading_line_move_down">Move reading line down</string>
    <string name="pattern_vertical_guide_move_left">Move vertical guide left</string>
    <string name="pattern_vertical_guide_move_right">Move vertical guide right</string>
    <string name="pattern_reading_line_position_state">%1$d%% from the top</string>
    <string name="pattern_vertical_guide_position_state">%1$d%% from the left</string>
    <string name="pattern_row_following_paused">Row following paused.</string>
    <string name="pattern_row_following_active">Following current row.</string>
    <string name="pattern_guide_enabled_state">Enabled</string>
    <string name="pattern_guide_disabled_state">Disabled</string>
    <string name="pattern_reading_line_following_state">%1$d%% from the top. Following current row.</string>
    <string name="pattern_reading_line_manual_state">%1$d%% from the top. Row following paused.</string>
</resources>
